--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Bus/new.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Bus/new.html.twig
@@ -6,10 +6,6 @@
 
 {% block extrajs %}
 <script type="text/javascript">
-    Tecnotek.UI.urls["api"] = "";
-    Tecnotek.UI.translates["btnDone"] = "";
-    Tecnotek.module = "busList";
-    Tecnotek.imagesURL = "/images";
     Tecnotek.assetsURL = "{{ path('TecnotekExpedienteBundle_homepage')}}";
 </script>
 {% endblock %}
@@ -55,8 +51,8 @@
                     <div class="formErrors">{{ form_errors(form.route) }}</div>
                     <label><span class="text-form" style="min-width: 150px;">{% trans %}label.route{% endtrans %}</span>{{ form_widget(form.route) }}</label>
 
-                    <div class="left"><a href="{{ path('_expediente_sysadmin_bus') }}" class="btn"><span></span>{% trans %}label.cancelar{% endtrans %}</a></div>
-                    <div class="left" style="margin-left: 25px;"><input class="btn" style="margin-top: 0px;" type="submit" name="save" value="{% trans %}label.save{% endtrans %}"/></div>
+                    <div class="left"><a href="{{ path('_expediente_sysadmin_bus') }}" class="btn delete"><span></span>{% trans %}label.cancelar{% endtrans %}</a></div>
+                    <button style="margin-left: 15px; margin-top: 0px;" type="submit" class="left btn save" name="save"><span></span>{% trans %}label.save{% endtrans %}</button>
                     <div class="clear"></div>                    
                 </form>
             </div>    
