--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Bus/show.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Bus/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'TecnotekExpedienteBundle::logged_layout.html.twig' %}
 
 {% block htmlTitle %}
-    Tecnotek :: Expediente :: Super Administrador :: Ruta
+    Tecnotek :: Expediente :: Super Administrador :: Bus
 {% endblock %}
 
 {% block extracss %}
@@ -9,12 +9,10 @@
 
 {% block extrajs %}
 <script type="text/javascript">
-    Tecnotek.UI.urls["deleteBusURL"] = "{{ path("_delete_bus", {id: entity.id}) }}";
+    Tecnotek.UI.urls["deleteURL"] = "{{ path("_delete_bus", {id: entity.id}) }}";
     Tecnotek.UI.translates["confirmDelete"] = "{% trans %}messages.confirmation.bus.delete{% endtrans %}";
-    Tecnotek.module = "showBus";
-    Tecnotek.imagesURL = "/images";
+    Tecnotek.module = "showEntity";
     Tecnotek.assetsURL = "{{ path('TecnotekExpedienteBundle_homepage')}}";
-    Tecnotek.updateFail = {% if updateRejected is defined %} true {% else %} false {% endif %};
 </script>
 {% endblock %}
 
@@ -23,7 +21,7 @@
     <div class="grid_24">
         <div>
             <div class="left"><h1>{% trans %}label.bus.show{% endtrans %}</h1></div>
-            <div class="right"><a href="{{ path('_expediente_sysadmin_bus') }}" class="btn"><span></span>{% trans %}label.volver{% endtrans %}</a></div>
+            <div class="right"><a href="{{ path('_expediente_sysadmin_bus') }}" class="btn list"><span></span>{% trans %}label.back.list{% endtrans %}</a></div>
             <div class="clear"></div>
         </div>
 
@@ -57,17 +55,17 @@
                     </div>
                     <div>
                         <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.riteve{%endtrans%}</div>
-                        <div id="labelRiteve" class="left">{{ entity.riteve|date("d/M/y") }}</div>
+                        <div id="labelRiteve" class="left">{% if entity.riteve != null %}{{ entity.riteve|date("d/M/y") }}{% endif %}</div>
                         <div class="clear"></div>
                     </div>
                     <div>
                         <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.ins{%endtrans%}</div>
-                        <div id="labelIns" class="left">{{ entity.ins|date("d/M/y") }}</div>
+                        <div id="labelIns" class="left">{% if entity.ins != null %}{{ entity.ins|date("d/M/y") }}{% endif %}</div>
                         <div class="clear"></div>
                     </div>
                     <div>
                         <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.permission{%endtrans%}</div>
-                        <div id="labelPermission" class="left">{{ entity.permission|date("d/M/y") }}</div>
+                        <div id="labelPermission" class="left">{% if entity.permission != null %}{{ entity.permission|date("d/M/y") }} {% endif %}</div>
                         <div class="clear"></div>
                     </div>
                     <div>
@@ -77,69 +75,10 @@
                     </div>
 
                     <div id="buttonsContainer" style="margin-top: 25px;">
-                        <div class="left btn" id="btnEditar">{% trans %}label.editar{% endtrans %}</div>
-                        <div class="left btn" id="btnEliminar" style="margin-left: 25px;">{% trans %}label.eliminar{% endtrans %}</div>
+                        <a href="{{ path('_expediente_sysadmin_bus_edit', {'id': entity.id}) }}" class="left btn edit"><span></span>{% trans %}label.edit{% endtrans %}</a>
+                        <div class="left btn delete" id="btnEliminar" style="margin-left: 25px;"><span></span>{% trans %}label.eliminar{% endtrans %}</div>
                         <div class="clear"></div>
                     </div>
-                </div>
-
-                <div id="editContainer" style="display: none;">
-                    <form class="customForm" id="createBusForm" action="{{ path('_expediente_sysadmin_bus_update') }}" method="post">
-                        <input type="hidden" id="id" name="id" value="{{ entity.id }}">
-
-                        {{ form_errors(form) }}
-
-                        {{ form_widget(form._token) }}
-
-                        <div class="formErrors">{{ form_errors(form.name) }}</div>
-                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.name{% endtrans %}</span>{{ form_widget(form.name) }}</label>
-
-                        <div class="formErrors">{{ form_errors(form.licensePlate) }}</div>
-                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.licensePlate{% endtrans %}</span>{{ form_widget(form.licensePlate) }}</label>
-
-                        <div class="formErrors">{{ form_errors(form.color) }}</div>
-                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.color{% endtrans %}</span>{{ form_widget(form.color) }}</label>
-
-                        <div class="formErrors">{{ form_errors(form.driver) }}</div>
-                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.driver{% endtrans %}</span>{{ form_widget(form.driver) }}</label>
-
-                        <div class="formErrors">{{ form_errors(form.capacity) }}</div>
-                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.capacity{% endtrans %}</span>{{ form_widget(form.capacity) }}</label>
-
-                        <div class="formErrors">{{ form_errors(form.riteve) }}</div>
-                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.riteve{% endtrans %}</span>{{ form_widget(form.riteve) }}</label>
-
-                        <div class="formErrors">{{ form_errors(form.ins) }}</div>
-                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.ins{% endtrans %}</span>{{ form_widget(form.ins) }}</label>
-
-                        <div class="formErrors">{{ form_errors(form.permission) }}</div>
-                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.permission{% endtrans %}</span>{{ form_widget(form.permission) }}</label>
-
-                        <div class="formErrors">{{ form_errors(form.route) }}</div>
-                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.route{% endtrans %}</span>{{ form_widget(form.route) }}</label>
-
-                        <!-- <label><span class="text-form" style="min-width: 150px;">{% trans %}label.name{% endtrans %}</span><input type="text" id="name" name="name" required="required" value=""></label>
-
-                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.licensePlate{% endtrans %}</span><input type="text" id="licensePlate" name="licensePlate" required="required" value=""></label>
-
-                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.color{% endtrans %}</span><input type="text" id="color" name="color" required="required" value=""></label>
-
-                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.driver{% endtrans %}</span><input type="text" id="driver" name="driver" required="required" value=""></label>
-
-                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.capacity{% endtrans %}</span><input type="text" id="capacity" name="capacity" required="required" value=""></label>
-
-                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.riteve{% endtrans %}</span><input type="text" id="riteve" name="riteve" required="required" value=""></label>
-
-                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.ins{% endtrans %}</span><input type="text" id="ins" name="ins" required="required" value=""></label>
-
-                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.permission{% endtrans %}</span><input type="text" id="permission" name="permission" required="required" value=""></label>
-
-                        <label><span class="text-form" style="min-width: 150px;">{% trans %}label.route{% endtrans %}</span><input type="text" id="route" name="route" required="required" value=""></label>
--->
-                        <div class="left btn" id="btnCancelEdit">{% trans %}label.cancelar{% endtrans %}</div>
-                        <div class="left" style="margin-left: 25px;"><input class="btn" style="margin-top: 0px;" type="submit" name="save" value="{% trans %}label.save{% endtrans %}"/></div>
-                        <div class="clear"></div>
-                    </form>
                 </div>
             </div>    
         </div>        
