--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Profesor/show.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Profesor/show.html.twig
@@ -53,7 +53,7 @@
                         <div class="clear"></div>
                     </div>
                     <div id="buttonsContainer" style="margin-top: 25px;">
-                        <div class="left btn" id="btnEditar">{% trans %}label.editar{% endtrans %}</div>
+                        <div class="left btn" id="btnEditar">{% trans %}label.edit{% endtrans %}</div>
                         <div class="left btn" id="btnCambiarPass" style="margin-left: 25px;">{% trans %}label.password.cambiar{% endtrans %}</div>
                         <div class="left btn" id="btnEliminar" style="margin-left: 25px;">{% trans %}label.eliminar{% endtrans %}</div>
                         <div class="clear"></div>
