--- a/web/expediente/css/pro_pages_style.css
+++ b/web/expediente/css/pro_pages_style.css
@@ -362,9 +362,12 @@ blockquote em{ display:inline-block; margin-top:10px;}
 .btn.print span{ display:inline-block; background: url(../images/icons/icons-color.png) -648px -36px;margin:0 7px 0 0}  
 .btn.dwload span{ display:inline-block; background: url(../images/icons/icons-color.png) -1476px -36px;margin:0 7px 0 0} 
 .btn.bookmark span{ display:inline-block; background: url(../images/icons/icons-color.png) -324px 0;margin:0 7px 0 0}   
-.btn.add span{ display:inline-block; background: url(../images/icons/icons-dark.png) -900px -36px;margin:0 7px 0 0} 
-.btn.save span{ display:inline-block; background: url(../images/icons/icons-dark.png) -900px -36px;margin:0 7px 0 0} 
-.btn.print2 span{ display:inline-block; background: url(../images/icons/icons-dark.png) -720px -36px;margin:0 7px 0 0}  
+.btn.add span{ display:inline-block; background: url(../images/icons/icons-dark.png) -900px -36px;margin:0 7px 0 0}
+.btn.edit span{ display:inline-block; background: url(../images/icons/icons-dark.png) -1692px -36px;margin:0 7px 0 0}
+.btn.delete span{ display:inline-block; background: url(../images/icons/icons-dark.png) -1728px -36px;margin:0 7px 0 0}
+.btn.save span, .btn.save input span{ display:inline-block; background: url(../images/icons/icons-dark.png) -900px -36px;margin:0 7px 0 0}
+.btn.list span{ display:inline-block; background: url(../images/icons/icons-dark.png) -360px -36px;margin:0 7px 0 0}
+.btn.print2 span{ display:inline-block; background: url(../images/icons/icons-dark.png) -720px -36px;margin:0 7px 0 0}
 	#breadcrumbs-one{
 	  background: #eee;
 	  border-width: 1px;
@@ -2030,3 +2033,10 @@ background: linear-gradient(#575757, #141414);
 }
 	.pro_menu li li li a,.pro_menu li li.sfHover li a,.pro_menu li li.current li a{ color: #a8a8a8;}
 		.pro_menu li li li a:hover,.pro_menu li li li.current a{color:#fff;}
+
+/**/
+/*.btn.edit span{ display:inline-block; background: url(../images/icons/token_dark_full.png) -900px -36px;margin:0 7px 0 0}*/
+.editButton {background: url(../images/icons/token_dark_full.png) no-repeat left 0px; background-position-x: -78px; background-position-y: -42px;}
+.viewButton {background: url(../images/icons/token_dark_full.png) no-repeat left 0px; background-position-x: -144px; background-position-y: -438px;}
+.imageButton { width: 26px; height: 24px; margin-right: 5px;}
+.imageButton:hover {cursor: pointer;}
