--- a/web/expediente/css/style.css
+++ b/web/expediente/css/style.css
@@ -1,6 +1,6 @@
 @import"reset.css";@import"pro_pages_style.css";@import"grid.css";@import"forms.css";@import"prettyPhoto.css";@import"jquery.snippet.min.css";
 @import"../skin/blue.monday/jplayer.blue.monday.css";@import url(http://fonts.googleapis.com/css?family=Arimo:700,400);@import"../css/smoothness/jquery-ui-1.8.17.custom.css";
-body{background:#e2e2e2 url(../images/bg-body2.jpg) 50% 0 repeat;font:12px/20px Arial, Helvetica, sans-serif;color:#949494;position:relative;min-width:980px;}
+body{background:#fff url(../images/bg-body.jpg)  50% 0 repeat;font:12px/20px Arial, Helvetica, sans-serif;color:#949494;position:relative;min-width:980px;}
 html,body{height:100%;}
 p{padding-bottom:20px;}
 a{color:#000;outline:none;cursor:pointer;text-decoration:none;}
@@ -15,7 +15,7 @@ h5{font-size:16px;}
 h6{font-size:14px;}
 /* Global Structure---------------------------------------- */
 .main{margin:0 auto;position:relative;width:940px; overflow:hidden;}
-.bg-main{ width:100%;background:#fff url(../images/bg-body.jpg)  50% 0 repeat;}
+.bg-main{ width:100%;padding-bottom:160px;}
 /*----- txt,links,lines,titles -----*/
 .clear{clear:both;line-height:0;font-size:0;overflow:hidden;height:0;width:100%;}
 .wrapper{overflow:hidden;position:relative;}
@@ -125,7 +125,10 @@ section.padsection7{ padding:21px 0 56px 0;}
 .button{ display:inline-block; background:#000 url(../images/bg-body2.jpg) 0 0 repeat; text-transform:uppercase; font:11px/15px Arial, Helvetica, sans-serif; color:#fff; -webkit-transition:all 0.5s ease;-moz-transition:all 0.5s ease;-o-transition:all 0.5s ease;transition:all 0.5s ease; padding:7px 15px 6px;}
 	.button:hover{ background:#e4e0dd; color:#000; text-decoration:none;}
 /******************** Footer ******************/
-footer{ padding:60px 0 70px;color:#adadad;}
+footer{ background:#e2e2e2 url(../images/bg-body2.jpg) 50% 0 repeat; color:#adadad;
+    position:absolute; width: 100%;
+    bottom:0;
+    height:160px;   /* Height of the footer */}
 footer p{ padding-bottom:9px;}
 footer h4{ padding-top:17px;}
 .privacy{ color:#fff;}
