--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/show.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Student/show.html.twig
@@ -13,6 +13,18 @@
     Tecnotek.UI.translates["confirmDelete"] = "{% trans %}messages.confirmation.student.delete{% endtrans %}";
     Tecnotek.module = "showEntity";
     Tecnotek.assetsURL = "{{ path('TecnotekExpedienteBundle_homepage')}}";
+
+
+
+    Tecnotek.UI.urls["getStudentsURL"] = "{{ path("_expediente_get_students_list") }}";
+    Tecnotek.UI.urls["associateStudentsURL"] = "{{ path("_expediente_associate_student") }}";
+    Tecnotek.UI.urls["removeStudentsFromClubURL"] = "{{ path("_expediente_remove_student_from_club") }}";
+    Tecnotek.UI.translates["confirmRemoveStudent"] = "{% trans %}messages.confirmation.club.remove.student{% endtrans %}";
+    Tecnotek.module = "showStudent";
+    Tecnotek.UI.vars["studentId"] = {{ entity.id }};
+    Tecnotek.UI.urls["saveNewContactURL"] = "{{ path("_expediente_save_new_contact") }}";
+
+    Tecnotek.StudentShow.translates["emptyFields"] = "{% trans %}messages.empty.fields{% endtrans %}";
 </script>
 {% endblock %}
 
@@ -26,34 +38,115 @@
         </div>
 
         <div class="centeredDiv">
-            <div class="formContainer" style="width: 920px;">
-                <div id="showContainer">
-                    <div>
-                        <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.firstname{%endtrans%}</div>
-                        <div id="labelCode" class="left">{{ entity.firstname }}</div>
-                        <div class="clear"></div>
-                    </div>
-                    <div>
-                        <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.lastname{%endtrans%}</div>
-                        <div id="labelName" class="left">{{ entity.lastname }}</div>
-                        <div class="clear"></div>
-                    </div>
+            <!-- Tabs -->
+            <div id="tabs">
+                <nav class="tabs">
+                    <div class="tab-header tab-current" id="generalTab">{%trans%}label.general{%endtrans%}</div>
+                    <section class="tabs-content" id="generalSection">
+                        <!-- -->
+                        <div id="showContainer" class="left">
+                            <div>
+                                <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.firstname{%endtrans%}</div>
+                                <div id="labelCode" class="left">{{ entity.firstname }}</div>
+                                <div class="clear"></div>
+                            </div>
+                            <div>
+                                <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.lastname{%endtrans%}</div>
+                                <div id="labelName" class="left">{{ entity.lastname }}</div>
+                                <div class="clear"></div>
+                            </div>
 
-                    <div id="buttonsContainer" style="margin-top: 25px;">
-                        <a href="{{ path('_expediente_sysadmin_student_edit', {'id': entity.id}) }}" class="left btn edit"><span></span>{% trans %}label.edit{% endtrans %}</a>
-                        <div class="left btn delete" id="btnEliminar" style="margin-left: 25px;"><span></span>{% trans %}label.eliminar{% endtrans %}</div>
+                            <div id="buttonsContainer" style="margin-top: 25px;">
+                                <a href="{{ path('_expediente_sysadmin_student_edit', {'id': entity.id}) }}" class="left btn edit"><span></span>{% trans %}label.edit{% endtrans %}</a>
+                                <div class="left btn delete" id="btnEliminar" style="margin-left: 25px;"><span></span>{% trans %}label.eliminar{% endtrans %}</div>
+                                <div class="clear"></div>
+                            </div>
+                        </div>
+
                         <div class="clear"></div>
-                    </div>
-                </div>
-            </div>    
-        </div>        
+                        <br/>
+                    </section>
+
+                    <div class="tab-header" id="relativesTab">{%trans%}label.relatives.in.student{%endtrans%}</div>
+                    <section class="tabs-content" style="display: none;" id="relativesSection">
+
+                        <div class="left" id="relativesList">
+                            <div class="row tableHeader">
+                                <div class="option_width" style="float: left; width: 300px;">{% trans %}label.name{% endtrans %}</div>
+                            </div>
+                            {% set counter = 0 %}
+
+                            {% for relative in relatives %}
+                            <div id="student_row_{{ relative.id }}" class="row userRow rel="{{ relative.id }}">
+                                <div class="option_width" style="float: left; width: 300px;">{{ relative.contact }}</div>
+                                <div class="right imageButton deleteButton" style="height: 16px;"  title="{% trans %}label.delete{% endtrans %}"  rel="{{ relative.id }}"></div>
+                                <div class="clear"></div>
+                            </div>
+                            {% set counter = counter + 1 %}
+                            {% endfor %}
+                        </div>
+
+                        <div class="left" style="margin-left: 50px; font-size: 14px;">
+
+                            <div>{% trans %}student.create.new.contact{%endtrans%}</div>
+                            <div style="font-size: 10px;">{% trans %}student.include.help{%endtrans%}</div>
+                            <form class="customForm" id="newcontact" action="{{ path('_expediente_sysadmin_club_save') }}" method="post" {{ form_enctype(form) }}>
+                                {{ form_errors(form) }}
+
+                                {{ form_widget(form._token) }}
+
+                                <label><span class="text-form" style="min-width: 150px;">{% trans %}label.firstname{% endtrans %}</span>
+                                <input type="text" id="firstname" name="firstname" required="required"></label>
+
+                                <label><span class="text-form" style="min-width: 150px;">{% trans %}label.lastname{% endtrans %}</span>
+                                <input type="text" id="lastname" name="lastname" required="required"></label>
+
+                                <label><span class="text-form" style="min-width: 150px;">{% trans %}label.identification{% endtrans %}</span>
+                                <input type="text" id="identification" name="identification" required="required"></label>
+
+                                <label><span class="text-form" style="min-width: 150px;">{% trans %}label.kinship{% endtrans %}</span>
+                                    <select id="kinship">
+                                        <option value="1">{% trans %}label.father{% endtrans %}</option>
+                                        <option value="2">{% trans %}label.mother{% endtrans %}</option>
+                                        <option value="3">{% trans %}label.brother{% endtrans %}</option>
+                                        <option value="4">{% trans %}label.sister{% endtrans %}</option>
+                                        <option value="99">{% trans %}label.other{% endtrans %}</option>
+                                    </select></label>
+
+                                <div id="otherDetail" style="display: none;">
+                                    <label><span class="text-form" style="min-width: 150px;">{% trans %}label.description{% endtrans %}</span>
+                                    <input type="text" id="description" name="description" required="required"></label>
+                                </div>
+
+                                <button id="asociateButton" style="margin-top: 0px;" type="button" class="right btn save" name="save"><span></span>{% trans %}label.asociate{% endtrans %}</button>
+                                <div class="clear"></div>
+                            </form>
+                            <br/>
+                            <hr/>
+                            <br/>
+                            <form id="searchform">
+                                <div>
+                                    <div>{% trans %}student.include.contact{%endtrans%}</div>
+                                    <div style="font-size: 10px;">{% trans %}student.include.help{%endtrans%}</div>
+
+                                    <input type="text" size="30" value="" id="searchBox"/>
+                                </div>
+                                <div id="suggestions"></div>
+                            </form>
+                        </div>
+                        <div class="clear"></div>
+                    </section>
+                </nav>
+            </div>
+            <!-- End Tabs -->
+        </div>
         <div class="clear"></div>
     </div>
     <div class="clear"></div>
     <div class="wrapper">
-            <div class="grid_24 padline">
-                    <div class="lineH"></div>
-            </div>
+        <div class="grid_24 padline">
+            <div class="lineH"></div>
+        </div>
     </div>
 </div>
 {% endblock %}
