--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -95,6 +95,7 @@
                     <ul>
                         <li><a style="text-align: left;" href="{{ path('_expediente_sysadmin_student') }}">{% trans %}label.students{% endtrans %}</a></li>
                         <li><a style="text-align: left;" href="{{ path('_expediente_sysadmin_club') }}">{% trans %}label.clubs{% endtrans %}</a></li>
+                        <li><a style="text-align: left;" href="{{ path('_expediente_sysadmin_ticket') }}">{% trans %}label.tickets{% endtrans %}</a></li>
                     </ul>
                 </li>
             {% endif %}
